Add Personal Productivity Hub - 3-agent architecture
- Agent A (MCP Server): M365 data access via Graph API
- Agent B (Scheduler): Task prioritization, calendar analysis, email summarization
- Agent C (Orchestrator): Personal assistant combining A & B

Features:
- Device code flow authentication with MSAL
- Commands: briefing, schedule, tasks, inbox
- Microsoft Graph integration for calendar, emails, tasks

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,19 @@ COPILOTSTUDIOAGENT__TENANTID=your-tenant-id
 COPILOTSTUDIOAGENT__AGENTAPPID=your-agent-app-id
 
 # ==============================================
+# Microsoft 365 Graph API (Personal Productivity Hub)
+# ==============================================
+# Create an app registration at: https://entra.microsoft.com
+# Required API Permissions (Delegated):
+#   - User.Read
+#   - Calendars.Read  
+#   - Mail.Read
+#   - Tasks.Read
+
+M365_CLIENT_ID=your-client-id-here
+M365_TENANT_ID=common
+
+# ==============================================
 # Optional: Azure Storage (for state management)
 # ==============================================
 # Azure Blob Storage connection string
